--- a/style.css
+++ b/style.css
@@ -57,8 +57,7 @@ button {
 }
 
 a:any-link {
-  color: #e5e7eb;
-  font-size: 1.8rem;
+  color: #eeff88;
   text-decoration: none;
 }
 
@@ -233,10 +232,27 @@ sub {
 /*||FOOTER*/
 .footer {
   flex-grow: 0.5;
-  margin: auto;
-  max-height: 100px;
+  margin: 0 20px;
+  max-height: 150px;
 }
 
 .footer p {
-  margin: 40px;
+  margin: 1em 0;
+}
+
+.footer-button {
+  background-color: #68f;
+  border-radius: 4px;
+  font-weight: bold;
+  padding: 4px;
+}
+
+.footer-info {
+  display: block;
+  padding-top: 10px;
+}
+
+.footer-info img {
+  display: inline;
+  width: 1.1em;
 }
